<resources>
    <string name="app_name">Study Assistant</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_institution">School/College</string>
    <string name="register_password">Password</string>
    <string name="register_button">Register</string>
    <string name="register_cancel">Cancel</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_create_account">Not Registered? Sign Up Here</string>
</resources>
