<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewStudyAssistant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:text="@string/app_name"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textViewStudyAssistant"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextInstitution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/register_institution"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInstitution"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:text="Male"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/radioSex"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_cancel"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="showMainActivity"/>

</RelativeLayout>